--- a/packages/floating-vue/package.json
+++ b/packages/floating-vue/package.json
@@ -1,58 +1,47 @@
 {
-  "name": "floating-vue",
-  "version": "5.2.2",
+  "name": "@teleflow/floating-vue",
+  "version": "2.0.3",
   "description": "Easy Vue tooltips, dropdowns, menus & popovers using floating-ui",
   "author": "Guillaume Chau <guillaume.b.chau@gmail.com>",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite build --watch",
-    "build": "cross-env NODE_ENV=production vite build && vue-tsc -d --emitDeclarationOnly",
-    "prepublishOnly": "pnpm run test && pnpm run build",
-    "test": "pnpm run test:unit",
+    "build": "cross-env NODE_ENV=production vite build && tsc -d --emitDeclarationOnly && vue-typegen gen -s src -o dist",
+    "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
+    "test": "yarn run test:unit",
+    "lint": "eslint . --ext .js,.vue",
     "test:unit": "peeky run"
   },
   "main": "dist/floating-vue.umd.js",
-  "module": "dist/floating-vue.mjs",
+  "module": "dist/floating-vue.es.js",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/floating-vue.umd.js",
-      "import": "./dist/floating-vue.mjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./nuxt": "./nuxt.mjs",
-    "./style.css": "./dist/style.css",
-    "./dist/style.css": "./dist/style.css"
-  },
-  "files": [
-    "dist",
-    "*.mjs"
-  ],
   "dependencies": {
-    "@floating-ui/dom": "~1.1.1",
+    "@floating-ui/dom": "^0.1.10",
     "vue-resize": "^2.0.0-alpha.1"
   },
   "peerDependencies": {
-    "vue": "^3.2.0",
-    "@nuxt/kit": "^3.2.0"
-  },
-  "peerDependenciesMeta": {
-    "@nuxt/kit": {
-      "optional": true
-    }
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@nuxt/kit": "^3.6.1",
-    "@peeky/test": "^0.14.1",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/test-utils": "^1.3.6",
-    "babel-jest": "^29.5.0",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@peeky/test": "^0.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "@vue/eslint-config-typescript": "^6.0.0",
+    "@vue/test-utils": "^1.1.2",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "fs-extra": "^11.1.1",
-    "vite": "^4.5.3",
-    "vue": "^3.3.4",
-    "vue-tsc": "^1.6.5",
+    "eslint": "^7.16.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-vue": "^7.4.0",
+    "fs-extra": "^9.0.1",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.12",
+    "vue": "^3.2.0",
     "vue-typegen": "^0.2.0"
   },
   "browserslist": [
