--- a/packages/floating-vue/tsconfig.json
+++ b/packages/floating-vue/tsconfig.json
@@ -12,8 +12,7 @@
     "jsx": "preserve",
     "outDir": "dist",
     "moduleResolution": "node",
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts",
